# alexnet

./: README.md  pyproject.toml
alexnet/: __main__.py
