[tool.poetry]
name = "alexnet"
version = "0.1.0"
description = ""
authors = ["Raphael Marra <rapha.tavaress@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
